[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "edge"
version = "0.1.0"
description = "TrustModel Edge — in-VPC AGP data plane"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Predixtions, Inc.", email = "eng@predixtions.com" }]
keywords = ["trustmodel", "agp", "edge", "kubernetes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "structlog>=24.4,<26.0",
  "httpx>=0.27,<1.0",
  # RS256 cert-JWT mint for the cert-authed calls to aurora-gateway
  # (policy fetch + telemetry). PyJWT[crypto] pulls in `cryptography`
  # so the RS256 backend is available without a separate dep.
  "pyjwt[crypto]>=2.9,<3.0",
  # Prometheus exposition for /metrics (TRUS-988)
  "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<2.0",
  "ruff>=0.7,<1.0",
]

[project.scripts]
edge = "edge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edge"]

[tool.hatch.build.targets.sdist]
include = ["src/edge", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
